# code

./: .gitignore  LICENSE
rpi/bare-test/: CMakeLists.txt  main.cpp
rpi/pi-bare/: kernel.cpp  mmio.h  pi-bare.cmake  pi-bare.h  printf.c  printf.h  readme.md  uart.cpp  uart.h
rpi/pi-bare/config/: boot32.S  boot64.S  linker.ld  toolchain-aarch64-elf-gcc.cmake  toolchain-arm-none-eabi-gcc.cmake
